[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "scaled"
description = "Large Scale Distribution Toolkit"
requires-python = ">=3.11"
readme = { file = "README.md", content-type = "text/markdown"}
license = { text = "GPL Version 3" }
authors = [{ name = "Zhuo Yin", email = "zhuoyin@gmail.com" }]
dynamic = ["dependencies", "version"]

[project.urls]
Home = "https://github.com/yzard/scaled"

[project.scripts]
scaled_scheduler = "scaled.entry_points.scheduler:main"
scaled_cluster = "scaled.entry_points.standalone_cluster:main"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests"]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
version = {attr = "scaled.__version__"}

[metadata]
long_description = { file = "README.md" }
long_description_content_type = "text/markdown"
